Fixed page title border-bottom overflow + restructured markup; hide subheaders at 480px or less

--- a/src/scss/_subheader.scss
+++ b/src/scss/_subheader.scss
@@ -5,6 +5,10 @@
   margin-top: -3px;
   padding-bottom: 7px;
   position: relative;
+
+  @media (max-width: 480px) {
+    display: none;
+  }
 }
 
 .subheader-subimg {
