--- a/src/scss/_type.scss
+++ b/src/scss/_type.scss
@@ -13,6 +13,22 @@ blockquote {
   }
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  line-height: 1.4;
+  margin: 0;
+}
+
 h6 {
   color: $gray-light;
   text-transform: uppercase;
