--- a/src/scss/components/_weather.scss
+++ b/src/scss/components/_weather.scss
@@ -17,9 +17,9 @@
 
 
 @media (max-width: 979px) {
-    .page-content #page_title #wb_status_txt { font-size: 12px; }
+    .page-content #page-title #wb_status_txt { font-size: 12px; }
 }
 
 @media (max-width: 767px) {
-    #page_title #weather_bug { display: none; }
+    #page-title #weather_bug { display: none; }
 }
