--- a/src/scss/page/_general.scss
+++ b/src/scss/page/_general.scss
@@ -1,6 +1,18 @@
-/* Subpages - Title */
-.subpage .page-content #page_title { padding-bottom: 15px; border-bottom: 1px dotted #333; margin-bottom: 10px; }
-.subpage .page-content #page_title h1 { font-weight: normal; display: block; margin-left: 0; }
+// Subpages - title
+.subpage {
+
+}
+
+#page-title {
+  border-bottom: 1px dotted #333;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+
+  h1 {
+    font-weight: normal;
+  }
+}
+
 
 
 /* Subpages - Sidebars - General */
@@ -125,7 +137,7 @@
 }
 
 @media (max-width: 767px) {
-    .subpage .page-content #page_title {
+    .subpage .page-content #page-title {
       margin-bottom: 15px;
       overflow: hidden;
       padding-bottom: 5px;
@@ -144,7 +156,7 @@
 
 @media (max-width: 480px) {
 
-    .subpage .page-content #page_title h1 { width: 100%; }
+    .subpage .page-content #page-title h1 { width: 100%; }
 
     #contentcol iframe, #contentcol embed, #contentcol object { width: 100%; height: 200px; }
 }
